exercises/99-gke/solution/exercise-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trainee-exercise-svc-1
  namespace: trainee-exercise
spec:
  type: NodePort
  selector:
    greeting: hello
    version: one
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 50000
---
apiVersion: v1
kind: Service
metadata:
  name: trainee-exercise-svc-2
  namespace: trainee-exercise
spec:
  type: NodePort
  selector:
    greeting: hello
    version: two
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
